Added: quiz section, questions with scores

--- a/index.html
+++ b/index.html
@@ -11,86 +11,33 @@
         <main class="parent-container flex-row p-4">
             <section class="left-container flex-column flex-align-center p-2">
                 <div class="app-name mb-2"><strong>We Quiz</strong></div>
-                <div class="mt-5 mb-2"><ion-icon class="icon" name="home"></ion-icon></div>
+                <div class="custom-margin mb-2"><a href="#"><ion-icon class="icon" name="home"></ion-icon></a></div>
                 <div class="my-2"><ion-icon class="icon" name="person-circle"></ion-icon></div>
+                <div class="my-2"><a href="./pages/games.html"><ion-icon class="icon" name="game-controller"></ion-icon></a></div>
                 <div class="my-2"><ion-icon class="icon" name="settings"></ion-icon></div>
-                <div class="my-2"><ion-icon class="icon" name="help-circle"></ion-icon></div>
             </section>
-            <section class="main-container grid-container">
-                <div class="item-1 flex-j-a-center">
-                    <label class="search-bar flex-j-space-a-center" for="search">
-                        <input type="search" name="search" id="search" placeholder="Search..." />
-                        <ion-icon name="search-outline"></ion-icon>
-                    </label>
+            <section class="main-container">
+                Home Page
+            </section>
+            <section class="right-container">
+                <div class="p-5 mx-5">
+                    Rules
                 </div>
-                <div class="item-hover item-2">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene1.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>Movies Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-hover item-3">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene2.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>Tech Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-hover item-4">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene3.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>World Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-hover item-5">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene4.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>Songs Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-hover item-6">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene5.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>Games Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-hover item-7">
-                    <div class="quiz-container flex-column p-5">
-                        <div>
-                            <img class="quiz-image" src="./assets/images/scene6.png" alt="scene1" />
-                        </div>
-                        <div>
-                            <h3>Chemistry Quiz</h3>
-                            <p>Algebra is the most important thing you'll ever learn in your life.</p>
-                        </div>
-                    </div>
+                <div class="right-container-scroll px-5 pb-5 mx-5">
+                    <ul class="p-5">
+                        <li>Keep it simple.</li>
+                        <li>Tell the customer's story.</li>
+                        <li>Write a script.</li>
+                        <li>Rehearse, rehearse, rehearse.</li>
+                        <li>Do an onsite test.</li>
+                        <li>Remain flexible.</li>
+                        <li>Use the demo as a proof point.</li>
+                        <li>Don't repeat yourself.</li>
+                        <li>Don't anticipate future needs.</li>
+                        <li>No jargon or techie-talk.</li>
+                    </ul>
                 </div>
             </section>
-            <section class="right-container"></section>
         </main>
 
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
