fix: styling and added home page and rules

--- a/index.html
+++ b/index.html
@@ -4,36 +4,41 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://fuzz-ui.netlify.app/styles/FuzzUI.css">
         <link rel="stylesheet" href="./styles/WeQuiz.css" />
         <title>WeQuiz</title>
     </head>
     <body>
-        <main class="parent-container flex-row p-4">
+        <main class="main-body flex-row p-4">
             <section class="left-container flex-column flex-align-center p-2">
-                <div class="app-name mb-2"><strong>We Quiz</strong></div>
+                <a href="#"><img class="img-logo mt-2" src="../assets/images/logo.png" alt="WeQuiz"></a>
                 <div class="custom-margin mb-2"><a href="#"><ion-icon class="icon" name="home"></ion-icon></a></div>
-                <div class="my-2"><ion-icon class="icon" name="person-circle"></ion-icon></div>
+                <!-- <div class="my-2"><ion-icon class="icon" name="person-circle"></ion-icon></div> -->
                 <div class="my-2"><a href="./pages/games.html"><ion-icon class="icon" name="game-controller"></ion-icon></a></div>
                 <div class="my-2"><ion-icon class="icon" name="settings"></ion-icon></div>
             </section>
+
             <section class="main-container">
-                Home Page
+                <p class="my-2">HomePage</p>
+                <img class="banner" src="https://img.freepik.com/free-vector/quiz-neon-sign_1262-19629.jpg?w=1380" alt="banner">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa expedita consequuntur, ducimus eius, hic iusto quidem magnam eum in pariatur optio harum vel. Ipsum, aperiam neque incidunt dolorum minima id.</p>
             </section>
+
             <section class="right-container">
-                <div class="p-5 mx-5">
+                <h3 class="p-3 mx-5 mt-5">
                     Rules
-                </div>
+                </h3>
                 <div class="right-container-scroll px-5 pb-5 mx-5">
-                    <ul class="p-5">
-                        <li>Keep it simple.</li>
-                        <li>Tell the customer's story.</li>
-                        <li>Write a script.</li>
-                        <li>Rehearse, rehearse, rehearse.</li>
-                        <li>Do an onsite test.</li>
+                    <ul class="px-5">
+                        <li>Keep it simple Keep it simple Keep it simple Keep it simple Keep it simple.</li>
+                        <li>Tell the customer's story Tell the customer's story.</li>
+                        <li>Write a script Write a script.</li>
+                        <li>Rehearse, rehearse, rehearse, rehearse, rehearse, rehearse, rehearse.</li>
+                        <li>Do an onsite test Do an onsite test Do an onsite test.</li>
                         <li>Remain flexible.</li>
-                        <li>Use the demo as a proof point.</li>
-                        <li>Don't repeat yourself.</li>
-                        <li>Don't anticipate future needs.</li>
+                        <li>Use the demo as a proof point Use the demo as a proof point.</li>
+                        <li>Don't repeat yourself Don't repeat yourself Don't repeat yourself.</li>
+                        <li>Don't anticipate future needs Don't anticipate future needs Don't anticipate future needs.</li>
                         <li>No jargon or techie-talk.</li>
                     </ul>
                 </div>
