--- a/pages/games.html
+++ b/pages/games.html
@@ -4,18 +4,20 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://fuzz-ui.netlify.app/styles/FuzzUI.css">
         <link rel="stylesheet" href="../styles/WeQuiz.css" />
         <title>Games</title>
     </head>
     <body>
-        <main class="parent-container flex-row p-4">
+        <main class="main-body flex-row p-4">
             <section class="left-container flex-column flex-align-center p-2">
-                <div class="app-name mb-2"><strong>We Quiz</strong></div>
+                <a href="../index.html"><img class="img-logo mt-2" src="../assets/images/logo.png" alt="WeQuiz"></a>
                 <div class="custom-margin mb-2"><a href="../index.html"><ion-icon class="icon" name="home"></ion-icon></a></div>
-                <div class="my-2"><ion-icon class="icon" name="person-circle"></ion-icon></div>
+                <!-- <div class="my-2"><ion-icon class="icon" name="person-circle"></ion-icon></div> -->
                 <div class="my-2"><a href="#"><ion-icon class="icon" name="game-controller"></ion-icon></a></div>
                 <div class="my-2"><ion-icon class="icon" name="settings"></ion-icon></div>
             </section>
+
             <section class="main-container grid-container">
                 <div class="item-1 flex-j-a-center">
                     <label class="search-bar flex-j-space-a-center" for="search">
@@ -108,6 +110,7 @@
                     </div>
                 </div>
             </section>
+
             <section class="right-container flex-column">
                 <div class="p-5 mx-5">
                     <progress class="progress-bar" id="file" value="60" max="100"> 32% </progress>
@@ -118,7 +121,7 @@
                 </div>
                 <div class="right-container-scroll px-5 pb-5 mx-5">
                     <div>
-                        <p>1. For which of the following disciplines is Nobel Prize awarded?</p>
+                        <p><strong>1.</strong> For which of the following disciplines is Nobel Prize awarded?</p>
                         <div class="option my-3 option-correct flex-j-space-a-center">a. Physics and Chemistry <ion-icon class="option-correct-icon" name="checkmark-circle"></ion-icon></div>
                         <div class="option my-3 option-wrong flex-j-space-a-center">b. Physiology or Medicine <ion-icon class="option-wrong-icon" name="close-circle"></ion-icon></div>
                         <div class="option my-3">c. Literature, Peace and Economics</div>
@@ -128,7 +131,7 @@
                     <hr class="my-5">
 
                     <div>
-                        <p>2. Hitler party which came into power in 1933 is known as?</p>
+                        <p><strong>2.</strong> Hitler party which came into power in 1933 is known as?</p>
                         <div class="option my-3 option-correct flex-j-space-a-center">a. Labour Party <ion-icon class="option-correct-icon" name="checkmark-circle"></ion-icon></div>
                         <div class="option my-3 option-wrong flex-j-space-a-center">b. Nazi Party <ion-icon class="option-wrong-icon" name="close-circle"></ion-icon></div>
                         <div class="option my-3">c. Ku-Klux-Klan</div>
@@ -138,7 +141,7 @@
                     <hr class="my-5">
 
                     <div>
-                        <p>3. For which of the following disciplines is Nobel Prize awarded?</p>
+                        <p><strong>3.</strong> For which of the following disciplines is Nobel Prize awarded?</p>
                         <div class="option my-3 option-correct flex-j-space-a-center">a. Physics and Chemistry <ion-icon class="option-correct-icon" name="checkmark-circle"></ion-icon></div>
                         <div class="option my-3 option-wrong flex-j-space-a-center">b. Physiology or Medicine <ion-icon class="option-wrong-icon" name="close-circle"></ion-icon></div>
                         <div class="option my-3">c. Literature, Peace and Economics</div>
@@ -148,7 +151,7 @@
                     <hr class="my-5">
 
                     <div>
-                        <p>4. Hitler party which came into power in 1933 is known as?</p>
+                        <p><strong>4.</strong> Hitler party which came into power in 1933 is known as?</p>
                         <div class="option my-3">a. Labour Party</div>
                         <div class="option my-3">b. Nazi Party</div>
                         <div class="option my-3">c. Ku-Klux-Klan</div>
@@ -158,7 +161,7 @@
                     <hr class="my-5">
 
                     <div>
-                        <p>5. For which of the following disciplines is Nobel Prize awarded?</p>
+                        <p><strong>5.</strong> For which of the following disciplines is Nobel Prize awarded?</p>
                         <div class="option my-3">a. Physics and Chemistry</div>
                         <div class="option my-3">b. Physiology or Medicine</div>
                         <div class="option my-3">c. Literature, Peace and Economics</div>
